<resources>
    <string name="app_name">FryChicksOrderApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Frichick Oreder App</string>
    <string name="action_settings">Settings</string>

    <string name="menu">Manu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_order">Order</string>
    <string name="menu_signout">Signout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
