<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_manu">

    <fragment
        android:id="@+id/nav_manu"
        android:name="com.example.frychicksorderapp.ui.manu.ManuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_manu" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.frychicksorderapp.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.frychicksorderapp.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.example.frychicksorderapp.ui.signout.SignoutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.frychicksorderapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.frychicksorderapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>